# rim-bmw-experiments

./: README.md
bin_manager/: CMakeLists.txt  package.xml  setup.py
bin_manager/src/bin_manager/: ar_tag_manager.py  ar_tag_manager_iface.py  bin_goal_planner.py  bin_man_motion_plan.py  bin_manager.py  pub_pose.py  test_bin_locs_both1.yaml
bin_manager/test/: test_bin_locs.yaml  test_bin_slots.yaml
bmw_percep/: .gitignore  CMakeLists.txt  package.xml
bmw_percep/data/: ground_coeffs.txt
bmw_percep/include/bmw_percep/: colorHistogram.hpp  groundPlane.hpp  kalmanFilter.hpp  kalmanFilterAcc.hpp  particleFilter.hpp  pcl_cv_utils.hpp  pplTrack.hpp  ppl_detection.hpp  shr_cv_utils.hpp  tracker_3D.hpp
bmw_percep/launch/: background_store.launch  background_store_back.launch  background_store_front.launch  background_sub.launch  bg_sub_n_merge.launch  merge_n_track.launch
bmw_percep/scripts/calibration/: rBodyTransform.m  transform_mat
bmw_percep/scripts/matlab/: err_kf_params.m  kf_errs.m  vel_visual1.m
bmw_percep/scripts/py/: hum_safety_pub.py
bmw_percep/src/: background_store.cpp  background_sub.cpp  cola_demo_tracking.cpp  cola_demo_tracking1.cpp  colorHistogram.cpp  groundPlane.cpp  kalmanFilter.cpp  kalmanFilterAcc.cpp  kf_param.cpp  learn_col_hist.cpp  merge_pc.cpp  particleFilter.cpp  pc_to_vid.cpp  pcl_cv_utils.cpp  people_pcl.cpp  pplTrack.cpp  ppl_detection.cpp  pub_kinect_msgs.cpp  pub_pcd.cpp  record_kin_pcd.cpp  sample_groundPlane.cpp  sample_groundPlaneReader.cpp  sample_people_track.cpp  sample_people_track_depth.cpp  shr_cv_utils.cpp  tracker_3D.cpp  tracker_from_file.cpp  xyz_based_tracking.cpp
control_sim/: CMakeLists.txt  package.xml
control_sim/launch/: eband_control.launch
control_sim/src/: eband_control.cpp  eband_control.h  human_frame_broadcaster.cpp  robot_frame_broadcaster.cpp
delivery_display/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
delivery_display/src/: display.cpp
dmtx_barcode_scan/: CMakeLists.txt  package.xml
dmtx_barcode_scan/include/dmtx_barcode_scan/: barcodeScan.hpp
dmtx_barcode_scan/msg/: Scan.msg
dmtx_barcode_scan/src/: barcodeScan.cpp  barcode_scan_node.cpp
eband_local_planner/include/eband_local_planner/: eband_local_planner.h
eband_local_planner/src/: eband_local_planner.cpp  eband_trajectory_controller.cpp
ellipsoidal_control/: CMakeLists.txt  package.xml  setup.py
ellipsoidal_control/src/ellipsoidal_control/: controller_base.py  ellipsoid_space.py  view_ellipsoidal_traj.py
excel_scanning_control/: CMakeLists.txt  package.xml
excel_scanning_control/src/excel_scanning_control/: view_ur_ell_traj.py
exp_max_person_filter/: CMakeLists.txt  package.xml
exp_max_person_filter/launch/: background_store_back.launch  background_store_front.launch  background_sub.launch  exp_max_filter.launch
exp_max_person_filter/matlab/: ellipse_tangent.m  ellipse_tangent_fun.m  ellsensorfun.m  vector_between.m  vector_between_fun.m
exp_max_person_filter/src/: background_sub.cpp  exp_max_filter.cpp
my_pcl_tutorial/: CMakeLists.txt  package.xml
my_pcl_tutorial/launch/: subtracted_cloud.launch
my_pcl_tutorial/src/: subscriber_from_file.cpp  subscriber_from_file1.cpp  subscriber_live.cpp  subscriber_live_ppl_detect.cpp
person_avoid/: CMakeLists.txt  package.xml  setup.py
person_avoid/src/person_avoid/: linestrip_viz.py  person_avoid.py  sm_person_avoid.py  ur_person_avoid.py
